# obsidian_knife

./: .gitignore  Cargo.toml  README.md  config.yaml  imageplan.md  imageplan.txt  invalid_wikilinks_plan.txt  parse_wikilinks.txt  readme.md  rustfmt.toml
.claude/: settings.local.json
.github/workflows/: ci.yml  rust.yml
examples/config/: example_config.md
src/: back_populate.rs  cleanup_dates.rs  cleanup_images.rs  config.rs  constants.rs  dedupe_images.rs  description_builder.rs  deterministic_file_search.rs  file_utils.rs  frontmatter.rs  image_file.rs  image_file_info.rs  image_files.rs  lib.rs  main.rs  markdown_file.rs  markdown_file_info.rs  markdown_files.rs  obsidian_repository.rs  obsidian_repository_info.rs  output_file_writer.rs  phrase.rs  regex_utils.rs  report.rs  run.rs  scan.rs  sha256_cache.rs  simplify_wikilinks.rs  structs.rs  test_utils.rs  thread_safe_output.rs  thread_safe_writer.rs  timer.rs  update_creation_dates.rs  update_dates.rs  validated_config.rs  wikilink.rs  wikilink_types.rs  yaml_frontmatter.rs  yaml_frontmatter_macro.rs  (+1 more)
src/back_populate/: alias_handling_tests.rs  ambiguous_matches_tests.rs  back_populate_tests.rs  case_sensitivity_tests.rs  exclusion_zone_tests.rs  file_processing_state_and_config_tests.rs  matching_tests.rs  table_handling_tests.rs
src/cleanup_images/: cleanup_image_tests.rs
src/config/: config.rs  config_tests.rs  mod.rs  validated_config.rs
src/frontmatter/: date_fix_tests.rs  mod.rs  serde_tests.rs
src/image_file/: image.rs  image_file_tests.rs  image_file_types.rs  initial_state.rs  mod.rs
src/image_file_info/: image_file_info_tests.rs
src/markdown_file/: alias_handling_tests.rs  back_populate.rs  back_populate_tests.rs  canonical_link.rs  case_sensitivity_tests.rs  constants.rs  date_tests.rs  date_validation.rs  exclusion_zone_tests.rs  image_link.rs  markdown_file_core.rs  markdown_file_types.rs  match_helpers.rs  matching.rs  matching_tests.rs  mod.rs  parse_tests.rs  persist_tests.rs  phantom_link.rs  process_content_tests.rs  replaceable_content.rs  table_handling_tests.rs  text_excluder.rs
src/markdown_file_info/: alias_handling_tests.rs  back_populate_tests.rs  case_sensitivity_tests.rs  date_fix_tests.rs  date_tests.rs  exclusion_zone_tests.rs  markdown_file_info_types.rs  matching_tests.rs  parse_and_persist_tests.rs  parse_tests.rs  persist_frontmatter_tests.rs  persist_reason_tests.rs  persist_tests.rs  process_content_tests.rs  table_handling_tests.rs
src/markdown_files/: alias_handling_tests.rs  back_populate_tests.rs  case_sensitivity_tests.rs  exclusion_zone_tests.rs  matching_tests.rs  table_handling_tests.rs
src/obsidian_repository/: ambiguous_matches_tests.rs  back_populate.rs  constants.rs  file_limit_tests.rs  file_process_limit_tests.rs  image_processing.rs  image_tests.rs  mod.rs  obsidian_repository_tests.rs  obsidian_repository_types.rs  persist_file_tests.rs  phantom_links.rs  repository.rs  repository_core.rs  scan_tests.rs  update_modified_tests.rs
src/obsidian_repository_info/: alias_handling_tests.rs  ambiguous_matches_tests.rs  back_populate_tests.rs  case_sensitivity_tests.rs  cleanup_image_tests.rs  exclusion_zone_tests.rs  file_process_limit_tests.rs  image_tests.rs  matching_tests.rs  obsidian_repository_info_new_tests.rs  obsidian_repository_info_types.rs  persist_file_tests.rs  scan_tests.rs  table_handling_tests.rs  update_modified_tests.rs
src/report/: add_frontmatter.rs  add_frontmatter_report.rs  ambiguous_matches.rs  ambiguous_matches_report.rs  back_populate.rs  back_populate_report.rs  canonical_links.rs  constants.rs  definition.rs  duplicate_images.rs  duplicate_images_report.rs  frontmatter_issues.rs  frontmatter_issues_report.rs  incompatible_image.rs  incompatible_image_report.rs  invalid_wikilink.rs  invalid_wikilink_report.rs  missing_references.rs  missing_references_report.rs  mod.rs  orchestration.rs  persist_reasons.rs  persist_reasons_report.rs  phantom_links.rs  report_writer.rs  support.rs  table_system.rs  unreferenced_images.rs  unreferenced_images_report.rs  unresolved_links.rs  writer.rs
src/scan/: process_content_tests.rs  scan_tests.rs
src/support/: constants.rs  escaping.rs  filesystem.rs  mod.rs  patterns.rs  vec_enum_filter.rs
src/test_support/: assert_utils.rs  assertions.rs  dates.rs  expectations.rs  file_builder.rs  helpers.rs  markdown_file_fixtures.rs  mod.rs  test_file_builder.rs  validated_config_fixtures.rs
src/test_utils/: assert_utils.rs  mod.rs  test_file_builder.rs
src/utils/: constants.rs  deterministic_file_search.rs  file_utils.rs  mod.rs  output_file_writer.rs  regex_utils.rs  report_writer.rs  sha256_cache.rs  thread_safe_writer.rs  timer.rs  vec_enum_filter.rs
src/validated_config/: constants.rs  mod.rs  validated_config_tests.rs
src/wikilink/: collect_wikilink_tests.rs  constants.rs  link.rs  mod.rs  (+6 more)
tests/: config_tests.rs
vecollect/: Cargo.toml
vecollect/src/: lib.rs
(+22 files in other folders)
