[package]
name = "obsidian_knife"
version = "0.1.2"
edition = "2021"

[lib]
name = "ok"
path = "src/lib.rs"

[[bin]]
name = "ok"
path = "src/main.rs"

[workspace]
members = ["vecollect"]

[dependencies]
aho-corasick = "1.1.3"
chrono = "0.4.39"
chrono-tz = "0.10.0"
derive_builder = "0.20.2"
filetime = "0.2.25"
itertools = "0.14.0"
lazy_static = "1.5.0"
rayon = "1.10.0"
regex = "1.11.1"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
serde_yaml = "~0.9.34"
sha2 = "0.10.8"
thiserror = "2.0.11"
vecollect = { path = "./vecollect" }

[dev-dependencies]
tempfile = "3.15.0"

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 3
debug = true

[profile.release]
opt-level = 3
codegen-units = 1
lto = "fat"
panic = "abort"
debug = false
split-debuginfo = "off"
overflow-checks = false
