[package]
name = "obsidian_knife"
version = "0.1.2"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Obsidian vault analysis and back-population tool"
repository = "https://github.com/pianonate/obsidian_knife"
readme = "README.md"
keywords = ["obsidian", "markdown", "wikilink"]
categories = ["command-line-utilities"]

[[bin]]
name = "ok"
path = "src/main.rs"

[workspace]

[workspace.dependencies]
aho-corasick = "1.1.3"
chrono = "0.4.39"
chrono-tz = "0.10.0"
derive_builder = "0.20.2"
derive_more = { version = "2", features = ["deref", "deref_mut", "into_iterator"] }
filetime = "0.2.25"
itertools = "0.14.0"
rayon = "1.10.0"
regex = "1.11.1"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
serde_yaml = "~0.9.34"
sha2 = "0.10.8"
tempfile = "3.15.0"
thiserror = "2.0.11"

[dependencies]
aho-corasick = { workspace = true }
chrono = { workspace = true }
chrono-tz = { workspace = true }
derive_builder = { workspace = true }
derive_more = { workspace = true }
filetime = { workspace = true }
itertools = { workspace = true }
rayon = { workspace = true }
regex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[workspace.lints.clippy]
expect_used = "deny"
panic = "deny"
unwrap_used = "deny"

all = { level = "deny", priority = -1 }
cargo = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }

multiple_crate_versions = "allow"

[lints]
workspace = true

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 3
debug = true

[profile.release]
opt-level = 3
codegen-units = 1
lto = "fat"
panic = "abort"
debug = false
split-debuginfo = "off"
overflow-checks = false
