[package]
name = "obsidian_knife"
version = "0.1.3"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Obsidian vault analysis and back-population tool"
repository = "https://github.com/pianonate/obsidian_knife"
readme = "README.md"
keywords = ["obsidian", "markdown", "wikilink"]
categories = ["command-line-utilities"]

[[bin]]
name = "ok"
path = "src/main.rs"

[dependencies]
aho-corasick = "1.1.4"
chrono = "0.4.44"
chrono-tz = "0.10.4"
derive_builder = "0.20.2"
derive_more = { version = "2", features = [
  "deref",
  "deref_mut",
  "into_iterator",
] }
filetime = "0.2.27"
itertools = "0.14.0"
rayon = "1.12.0"
regex = "1.12.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_yaml = "~0.9.34"
sha2 = "0.11.0"
thiserror = "2.0.18"

[dev-dependencies]
tempfile = "3.27.0"

[lints.clippy]
allow_attributes_without_reason = "deny"
expect_used = "deny"
self_named_module_files = "deny" # use module/mod.rs (directory form) when a module has submodules
panic = "deny"
unreachable = "deny"
unwrap_used = "deny"

all = { level = "deny", priority = -1 }
cargo = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }

multiple_crate_versions = "allow"
redundant_pub_crate = "allow"     # cargo mend is the visibility authority, not clippy

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 3
debug = true

[profile.release]
opt-level = 3
codegen-units = 1
lto = "fat"
panic = "abort"
debug = false
split-debuginfo = "off"
overflow-checks = false
