[package]
name = "vecollect"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Proc-macro that derives collection traits for Vec-wrapper structs"
repository = "https://github.com/pianonate/obsidian_knife"
readme = "README.md"
keywords = ["proc-macro", "derive", "collection"]
categories = ["rust-patterns"]

[lib]
proc-macro = true

[lints]
workspace = true

[dependencies]
syn = { version = "2.0.117", features = ["full"] }
quote = "1.0.45"
proc-macro2 = "1.0.106"
